# libmfs

./: .gitignore  Makefile.am  README  configure.ac
include/: Makefile.am  libmfs.h
include/libmfs/: Makefile.am  crc.h  parser.h  stream.h  types.h
src/: Makefile.am  crc.c  parser.c  stream.c
